Finally got the hud to work. Also, changed some sounds around and modified initial health and armor for multiplayer game. Now to make the killCount the thing that makes this game... HAPPI!

--- a/HAPPI/Quake4Config.cfg
+++ b/HAPPI/Quake4Config.cfg
@@ -260,7 +260,7 @@ seta ui_model_marine ""
 seta ui_team "Marine"
 seta si_autobalance "1"
 seta si_shuffle "0"
-seta si_spectators "1"
+seta si_spectators "0"
 seta si_usePass "0"
 seta si_warmup "1"
 seta si_teamDamage "0"
@@ -269,13 +269,13 @@ seta si_allowVoting "0"
 seta si_useReady "0"
 seta si_tourneyLimit "3"
 seta si_captureLimit "5"
-seta si_minPlayers "2"
-seta si_maxPlayers "8"
+seta si_minPlayers "1"
+seta si_maxPlayers "4"
 seta si_mapCycle ""
-seta si_name "Quake 4 Server"
+seta si_name "afv"
 seta g_spectatorChat "0"
 seta net_clientLagOMeter "0"
-seta si_voiceChat "1"
+seta si_voiceChat "0"
 seta si_serverURL ""
 seta net_serverDlTable ""
 seta net_serverDlBaseURL ""
